<resources>

    <string name="app_name">URL eXtractor &amp; eXpander</string>
    <string name="app_version" translatable="false">2.0 beta3</string>
    <string name="receiver_label">eXtract &amp; eXpand URL</string>

    <string-array name="theme_names">
        <item>Dark theme</item>
        <item>Light theme</item>
    </string-array>
    <string-array name="theme_values" translatable="false">
        <item>dark</item>
        <item>light</item>
    </string-array>

    <string name="copied_clipboard">Expanded URL copied to clipboard</string>
    <string name="no_links">No links detected</string>
    <string name="dialog_extracting_expanding">Extracting and expanding URLs</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_about">About&#8230;</string>
    <string name="pref_theme_dialog_title">Select a theme</string>
    <string name="pref_theme_title">Theme used in the application</string>
    <string name="pref_vibrate_title">Vibration</string>
    <string name="pref_vibrate_summary">Vibrate after eXtract and eXpand URLs</string>
    <string name="pref_more_title">More apps by RedInput</string>

</resources>